--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "segoe ui";
-  background-image: url(../assets/img/cover2.jpg);
+  background-image: url(../assets/img/bodybg.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -85,6 +85,98 @@ body {
 .contenedor {
   max-width: 960px;
   margin: auto;
+}
+
+.centrado {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*Parallax*/
+.container-fluid {
+  width: 100%;
+}
+
+.contenedor {
+  max-width: 960px;
+  margin: auto;
+}
+
+.box1 {
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.box2 {
+  width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.bloque h1 {
+  margin: 0;
+  text-align: center;
+  font-size: 24px;
+  color: white;
+  line-height: 500px;
+}
+
+.bloque ul {
+  margin: 0;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+  line-height: 50px;
+
+  list-style: none;
+}
+
+.bloque h2 {
+  font-size: 18px;
+}
+
+.bloque p {
+  font-size: 16px;
+  text-align: justify;
+}
+
+.bloque.parallax {
+  height: 500px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+@media (min-width: 768px) {
+  .flex-column {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+
+@media (min-width: 1200px) {
+  .bloque.parallax {
+    height: 600px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+}
+
+.parallax.cover-1 {
+  background-image: url(../assets/img/cover1.jpg);
+}
+
+.parallax.cover-2 {
+  background-image: url(../assets/img/cover2.jpg);
+}
+
+.parallax.cover-3 {
+  background-image: url(../assets/img/cover3.jpg);
 }
 
 /*Navbar*/
@@ -246,6 +338,7 @@ body {
     display: block;
   }
 }
+
 .banner-title {
   width: 60%;
 }
@@ -259,5 +352,111 @@ body {
 @media (min-width: 1200px) {
   .banner-title {
     width: 40%;
+  }
+}
+/*section#3 */
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.personajes {
+  width: 250px;
+}
+
+@media (min-width: 768px) {
+  .personajes {
+    width: 350px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .personajes {
+    width: 380px;
   }
 }
