--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,13 @@ body {
 .parallax.cover-4 {
   background-image: url(../assets/img/cover4.jpg);
 }
+.parallax.cover-5 {
+  background-image: url(../assets/img/cover5.jpg);
+}
+
+.parallax.cover-6 {
+  background-image: url(../assets/img/cover6.jpg);
+}
 
 /*Navbar*/
 .nav {
@@ -463,6 +470,162 @@ body {
     width: 380px;
   }
 }
+
+/*section#5*/
+.box-suscripto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-suscribirse {
+  padding: 13px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .input-suscribirse {
+    padding: 13px;
+    width: 400px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .input-suscribirse {
+    padding: 13px;
+    width: 400px;
+  }
+}
+
+.iconos-flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+.iconos-item {
+  width: 20px !important;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+@media (min-width: 768px) {
+  .iconos-item {
+    width: 20px !important;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .iconos-item {
+    width: 40px !important;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+.btn {
+  background-color: #c19d53;
+  border: 1px solid #c19d53;
+  border-color: var(--accent-color, #c19d53);
+  border-radius: 4px;
+  color: #fff;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 500;
+  min-width: 204px;
+  padding: 15px 8px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: color 0.2s, background-color 0.2s;
+}
+
+/*section#6*/
+.d-grid {
+  display: grid;
+}
+
+.card-grip1 {
+  border-radius: 1rem;
+  height: 10rem;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: auto auto;
+}
+
+.grid-list-container-news {
+  grid-template-columns: auto;
+}
+
+@media (min-width: 768px) {
+  .grid-list-container-news {
+    grid-template-columns: auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .grid-list-container-news {
+    grid-template-columns: auto auto;
+  }
+}
+
+.course {
+  background-color: #c19d53;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  max-width: 100%;
+  margin: 10px;
+  overflow: hidden;
+}
+
+.course h6 {
+  opacity: 0.6;
+  margin: 0;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.course h2 {
+  letter-spacing: 1px;
+  margin: 10px 0;
+}
+
+.course-preview {
+  background-color: #2a265f;
+  color: #fff;
+  max-width: 250px;
+}
+
+.course-preview a {
+  color: #fff;
+  display: inline-block;
+  font-size: 12px;
+  opacity: 0.6;
+  margin-top: 30px;
+  text-decoration: none;
+}
+
+.course-info {
+  padding: 30px;
+  position: relative;
+  width: 100%;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container-card {
+  padding: 2px 16px;
+}
+
 /*Footer*/
 footer {
   margin-top: auto;
