--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 .bloque.parallax {
-  height: 500px;
+  height: 600px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -159,7 +159,7 @@ body {
 
 @media (min-width: 1200px) {
   .bloque.parallax {
-    height: 600px;
+    height: 800px;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -210,101 +210,127 @@ body {
   background-image: url(../assets/img/cover12.jpg);
 }
 
-/*Navbar*/
-.nav {
-  height: 50px;
-  width: 100%;
-  background-color: #020202;
-  position: relative;
-}
-
-.nav > .nav-header {
-  display: inline;
-}
-
-.nav > .nav-header > .nav-title {
-  display: inline-block;
-  margin-left: 1rem;
-  color: #fff;
-  padding: 4px;
-}
-
-.nav > .nav-btn {
-  display: none;
-}
-
-.nav > .nav-links {
-  display: inline;
-  float: right;
-  font-size: 13px;
-}
-
-.nav > .nav-links > a {
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
+a {
   text-decoration: none;
-  color: #efefef;
+}
+ul {
+  list-style: none;
 }
 
-.nav > .nav-links > a:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+.header {
+  background-color: black;
+  box-shadow: 1px 1px 5px 0px var(--gray);
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+/* Logo */
+.logo-nav {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 30px;
+  width: 160px;
+  justify-content: center;
+  align-items: center;
 }
 
-.nav > #nav-check {
+/* Nav menu */
+.nav {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: black;
+  overflow: hidden;
+}
+.menu a {
+  display: block;
+  padding: 30px;
+  color: white;
+}
+.menu a:hover {
+  background-color: gray;
+}
+.nav {
+  max-height: 0;
+  transition: max-height 0.5s ease-out;
+}
+
+/* Menu Icon */
+.hamb {
+  cursor: pointer;
+  float: right;
+  padding: 40px 20px;
+} /* Style label tag */
+
+.hamb-line {
+  background: white;
+  display: block;
+  height: 2px;
+  position: relative;
+  width: 24px;
+} /* Style span tag */
+
+.hamb-line::before,
+.hamb-line::after {
+  background: white;
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+}
+.hamb-line::before {
+  top: 5px;
+}
+.hamb-line::after {
+  top: -5px;
+}
+
+.side-menu {
   display: none;
 }
 
-.logo-nav {
-  width: 120px;
+/* Toggle menu icon */
+.side-menu:checked ~ nav {
+  max-height: 100%;
+}
+.side-menu:checked ~ .hamb .hamb-line {
+  background: transparent;
+}
+.side-menu:checked ~ .hamb .hamb-line::before {
+  transform: rotate(-45deg);
+  top: 0;
+}
+.side-menu:checked ~ .hamb .hamb-line::after {
+  transform: rotate(45deg);
+  top: 0;
 }
 
-@media (max-width: 768px) {
-  .nav > .nav-btn {
-    display: inline-block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
+/* Responsiveness */
+@media (min-width: 768px) {
+  .nav {
+    max-height: none;
+    top: 0;
+    position: relative;
+    float: right;
+    width: fit-content;
+    background-color: transparent;
   }
-  .nav > .nav-btn > label {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    padding: 13px;
+  .menu li {
+    float: left;
   }
-  .nav > .nav-btn > label:hover,
-  .nav #nav-check:checked ~ .nav-btn > label {
-    background-color: rgba(0, 0, 0, 0.3);
+  .menu a:hover {
+    background-color: transparent;
+    color: var(--gray);
   }
-  .nav > .nav-btn > label > span {
-    display: block;
-    width: 25px;
-    height: 10px;
-    border-top: 2px solid #eee;
-  }
-  .nav > .nav-links {
-    position: absolute;
-    display: block;
-    width: 50%;
-    background-color: #333;
-    height: 0px;
-    transition: all 0.3s ease-in;
-    overflow-y: hidden;
-    top: 45px;
-    right: 0px;
-  }
-  .nav > .nav-links > a {
-    display: block;
-    width: 100%;
-  }
-  .nav > #nav-check:not(:checked) ~ .nav-links {
-    height: 0px;
-  }
-  .nav > #nav-check:checked ~ .nav-links {
-    height: calc(38vh - 50px);
-    overflow-y: auto;
+
+  .hamb {
+    display: none;
   }
 }
-/*Header*/
+
+/* Banner*/
 .flex-column {
   display: flex;
   flex-direction: column-reverse;
