--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-  font-family: "segoe ui";
+  font-family: "Russo One", sans-serif;
   background-image: url(../assets/img/bodybg.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -218,7 +220,7 @@ ul {
 }
 
 .header {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.21);
   box-shadow: 1px 1px 5px 0px var(--gray);
   position: sticky;
   top: 0;
@@ -248,7 +250,7 @@ ul {
   color: white;
 }
 .menu a:hover {
-  background-color: gray;
+  background-color: #c19d53;
 }
 .nav {
   max-height: 0;
@@ -307,7 +309,6 @@ ul {
   top: 0;
 }
 
-/* Responsiveness */
 @media (min-width: 768px) {
   .nav {
     max-height: none;
@@ -322,7 +323,7 @@ ul {
   }
   .menu a:hover {
     background-color: transparent;
-    color: var(--gray);
+    color: #c19d53;
   }
 
   .hamb {
@@ -729,9 +730,72 @@ ul {
 }
 
 /*Footer*/
-footer {
+.footer {
   margin-top: auto;
-  background-color: #020202;
-  height: 12vh;
-  color: white;
+}
+
+.pie-pagina {
+  width: 100%;
+  background-color: #0a141d;
+}
+
+.pie-pagina .grupo-1 {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img {
+  width: 250px;
+}
+.pie-pagina .grupo-1 .box h2 {
+  color: #fff;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p {
+  color: #efefef;
+  margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a {
+  display: inline-block;
+  text-decoration: none;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: #fff;
+  margin-right: 10px;
+  background-color: #0d2033;
+  text-align: center;
+  transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover {
+  color: aqua;
+}
+.pie-pagina .grupo-2 {
+  background-color: #0a1a2a;
+  padding: 15px 10px;
+  text-align: center;
+  color: #fff;
+}
+.pie-pagina .grupo-2 small {
+  font-size: 15px;
+}
+@media screen and (max-width: 800px) {
+  .pie-pagina .grupo-1 {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+    padding: 35px 0px;
+  }
 }
