--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ ul {
   top: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .nav {
     max-height: none;
     top: 0;
@@ -775,7 +775,7 @@ ul {
   line-height: 45px;
   color: #fff;
   margin-right: 10px;
-  background-color: #0d2033;
+  background-color: #c19d53;
   text-align: center;
   transition: all 300ms ease;
 }
