--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .bloque.parallax {
-  height: 500px;
+  height: 600px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -241,8 +241,8 @@ ul {
 /* Nav menu */
 .nav {
   width: 100%;
-  position: fixed;
   background-color: black;
+  position: fixed;
   overflow: hidden;
 }
 .menu a {
@@ -367,6 +367,10 @@ ul {
   align-items: center;
 }
 
+.solo-pantallas-tablet {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .justify-content {
     display: flex;
@@ -376,8 +380,12 @@ ul {
     display: none;
   }
 
-  .solo-pantallas-grandes {
+  .solo-pantallas-tablet {
     display: block;
+  }
+
+  .solo-pantallas-grandes {
+    display: none;
   }
 }
 
@@ -388,6 +396,10 @@ ul {
     justify-content: space-around;
   }
   .solo-pantallas-chicas {
+    display: none;
+  }
+
+  .solo-pantallas-tablet {
     display: none;
   }
 
@@ -403,6 +415,7 @@ ul {
 @media (min-width: 768px) {
   .banner-title {
     width: 60%;
+    display: block;
   }
 }
 
