--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,10 @@ body {
   background-image: url(../assets/img/cover12.jpg);
 }
 
+.parallax.cover-13 {
+  background-image: url(../assets/img/cover13.jpg);
+}
+
 a {
   text-decoration: none;
 }
@@ -750,6 +754,14 @@ ul {
   .bandai-store-imagen {
     width: 400px;
   }
+}
+
+/*Multimedia*/
+.video-youtube {
+  width: 100%;
+  height: 400px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 /*Footer*/
