--- a/css/style.css
+++ b/css/style.css
@@ -764,6 +764,15 @@ ul {
   padding-right: 1rem;
 }
 
+@media (min-width: 1200px) {
+  .video-youtube {
+    width: 100%;
+    height: 600px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 /*Footer*/
 .footer {
   margin-top: auto;
